Fix the navbar issue with alignment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -71,6 +71,10 @@ h3, h4 {
   .job {
     padding: 1em 0;
     border-bottom: 1px solid rgba(250, 250, 250, 0.5);
+    img {
+      text-align: center;
+    max-width: 80%;
+    }
     h2 {
       font-size: 2.5em;
       font-weight: 300;
@@ -85,6 +89,7 @@ h3, h4 {
     }
   }
 }
+//*[@id="jobs"]/div/p[5]/img
 
 #links {
   margin-top: 2em;
